--- a/.emacs.d/emacs-init.org
+++ b/.emacs.d/emacs-init.org
@@ -628,79 +628,82 @@ representing colors with the color they represent as background.
 
 * Evil-org-mode
   From https://github.com/edwtjo/evil-org-mode/blob/master/evil-org.el
-#+BEGIN_SRC   emacs-lisp
-          (define-minor-mode evil-org-mode
-            "Buffer local minor mode for evil-org"
-            :init-value nil
-            :lighter " EvilOrg"
-            :keymap (make-sparse-keymap) ; defines evil-org-mode-map
-            :group 'evil-org)
-
-          (add-hook 'org-mode-hook 'evil-org-mode) ;; only load with org-mode
-          (setq evil-auto-indent nil)
-
-          (defun always-insert-item ()
-            "Force insertion of org item"
-            (if (not (org-in-item-p))
-                (insert "\n- ")
-              (org-insert-item))
-            )
-
-          (defun evil-org-eol-call (fun)
-            "Go to end of line and call provided function"
-            (end-of-line)
-            (funcall fun)
-            (evil-append nil)
-            )
-
-          ;; normal state shortcuts
-          (evil-define-key 'normal evil-org-mode-map
-            "gh" 'outline-up-heading
-            "gj" (if (fboundp 'org-forward-same-level) ;to be backward compatible with older org version
-                   'org-forward-same-level
-                   'org-forward-heading-same-level)
-            "gk" (if (fboundp 'org-backward-same-level)
-                   'org-backward-same-level
-                   'org-backward-heading-same-level)
-            "gl" 'outline-next-visible-heading
-            "t" 'org-todo
-            "T" '(lambda () (interactive) (evil-org-eol-call '(org-insert-todo-heading nil)))
-            "H" 'org-beginning-of-line
-            "L" 'org-end-of-line
-            ";t" 'org-show-todo-tree
-            "o" '(lambda () (interactive) (evil-org-eol-call 'always-insert-item))
-            "O" '(lambda () (interactive) (evil-org-eol-call 'org-insert-heading))
-            "$" 'org-end-of-line
-            "^" 'org-beginning-of-line
-            "<" 'org-metaleft
-            ">" 'org-metaright
-            ";a" 'org-agenda
-            "-" 'org-cycle-list-bullet
-            (kbd "TAB") 'org-cycle)
-
-          ;; normal & insert state shortcuts.
-          (mapc (lambda (state)
-                  (evil-define-key state evil-org-mode-map
-                    (kbd "M-l") 'org-metaright
-                    (kbd "M-h") 'org-metaleft
-                    (kbd "M-k") 'org-metaup
-                    (kbd "M-j") 'org-metadown
-                    (kbd "M-L") 'org-shiftmetaright
-                    (kbd "M-H") 'org-shiftmetaleft
-                    (kbd "M-K") 'org-shiftmetaup
-                    (kbd "M-J") 'org-shiftmetadown
-                    (kbd "M-o") '(lambda () (interactive)
-                                   (evil-org-eol-call
-                                    '(lambda()
-                                       (org-insert-heading)
-                                       (org-metaright))))
-                    (kbd "M-t") '(lambda () (interactive)
-                                   (evil-org-eol-call
-                                    '(lambda()
-                                       (org-insert-todo-heading nil)
-                                       (org-metaright))))
-                    ))
-                '(normal insert))
+#+BEGIN_SRC emacs-lisp
+  (define-minor-mode evil-org-mode
+    "Buffer local minor mode for evil-org"
+    :init-value nil
+    :lighter " EvilOrg"
+    :keymap (make-sparse-keymap) ; defines evil-org-mode-map
+    :group 'evil-org)
+  
+  (add-hook 'org-mode-hook 'evil-org-mode) ;; only load with org-mode
+  (setq evil-auto-indent nil)
+  
+  (defun always-insert-item ()
+    "Force insertion of org item"
+    (if (not (org-in-item-p))
+        (insert "\n- ")
+      (org-insert-item))
+    )
+  
+  (defun evil-org-eol-call (fun)
+    "Go to end of line and call provided function"
+    (end-of-line)
+    (funcall fun)
+    (evil-append nil)
+    )
+  
+  ;; normal state shortcuts
+  (evil-define-key 'normal evil-org-mode-map
+    "gh" 'outline-up-heading
+    "gj" (if (fboundp 'org-forward-same-level) ;to be backward compatible with older org version
+           'org-forward-same-level
+           'org-forward-heading-same-level)
+    "gk" (if (fboundp 'org-backward-same-level)
+           'org-backward-same-level
+           'org-backward-heading-same-level)
+    "gl" 'outline-next-visible-heading
+    "t" 'org-todo
+    "T" '(lambda () (interactive) (evil-org-eol-call '(org-insert-todo-heading nil)))
+    "H" 'org-beginning-of-line
+    "L" 'org-end-of-line
+    ";t" 'org-show-todo-tree
+    "o" '(lambda () (interactive) (evil-org-eol-call 'always-insert-item))
+    "O" '(lambda () (interactive) (evil-org-eol-call 'org-insert-heading))
+    "$" 'org-end-of-line
+    "^" 'org-beginning-of-line
+    "<" 'org-metaleft
+    ">" 'org-metaright
+    ";a" 'org-agenda
+    "-" 'org-cycle-list-bullet
+    (kbd "TAB") 'org-cycle)
+  
+  ;; normal & insert state shortcuts.
+  (mapc (lambda (state)
+          (evil-define-key state evil-org-mode-map
+            (kbd "M-l") 'org-metaright
+            (kbd "M-h") 'org-metaleft
+            (kbd "M-k") 'org-metaup
+            (kbd "M-j") 'org-metadown
+            (kbd "M-L") 'org-shiftmetaright
+            (kbd "M-H") 'org-shiftmetaleft
+            (kbd "M-K") 'org-shiftmetaup
+            (kbd "M-J") 'org-shiftmetadown
+            (kbd "M-o") '(lambda () (interactive)
+                           (evil-org-eol-call
+                            '(lambda()
+                               (org-insert-heading)
+                               (org-metaright))))
+            (kbd "M-t") '(lambda () (interactive)
+                           (evil-org-eol-call
+                            '(lambda()
+                               (org-insert-todo-heading nil)
+                               (org-metaright))))
+            ))
+        '(normal insert))
+#+END_SRC
+  Done with =evil-org=, but we still need to close the blocks for the =use-package evil=.
+#+BEGIN_SRC emacs-lisp
       )
     )
 
@@ -712,7 +715,7 @@ representing colors with the color they represent as background.
       (add-hook 'ag-mode-hook (lambda () (toggle-truncate-lines t)))
     )
   )
-
+  
   (require-package 'project-explorer)
   (use-package project-explorer
     :config
@@ -720,22 +723,22 @@ representing colors with the color they represent as background.
         (setq pe/omit-regex (concat pe/omit-regex "\\|^node_modules$"))
       )
     )
-
+  
   (require-package 'ace-jump-mode)
   (use-package ace-jump-mode)
-
+  
   (require-package 'expand-region)
   (use-package expand-region)
-
+  
   (require-package 'editorconfig)
   (use-package editorconfig)
-
+  
   (require-package 'etags-select)
   (use-package etags-select
     :init
       (setq etags-select-go-if-unambiguous t)
     )
-
+  
   (require-package 'windsize)
   (use-package windsize
     :init
@@ -745,7 +748,7 @@ representing colors with the color they represent as background.
       (windsize-default-keybindings)
       )
     )
-
+  
   (require-package 'rainbow-delimiters)
   (use-package rainbow-delimiters
     :init
@@ -753,7 +756,7 @@ representing colors with the color they represent as background.
       (global-rainbow-delimiters-mode)
     )
     )
-
+  
   (require-package 'guide-key)
   (use-package guide-key
     :diminish guide-key-mode
@@ -764,15 +767,15 @@ representing colors with the color they represent as background.
       (guide-key-mode 1)
       )
   )
-
+  
   (setq my-eshell-buffer-count 0)
-
+  
   (after 'evil
       (require-package 'key-chord)
       (key-chord-mode 1)
       (define-key evil-motion-state-map "gn" 'my-evil-next-match)
       (define-key evil-motion-state-map "gN" 'my-evil-previous-match)
-
+  
       ;;; esc quits
       (define-key evil-normal-state-map [escape] 'keyboard-quit)
       (define-key evil-visual-state-map [escape] 'keyboard-quit)
@@ -781,38 +784,38 @@ representing colors with the color they represent as background.
       (define-key minibuffer-local-completion-map [escape] 'minibuffer-keyboard-quit)
       (define-key minibuffer-local-must-match-map [escape] 'minibuffer-keyboard-quit)
       (define-key minibuffer-local-isearch-map [escape] 'minibuffer-keyboard-quit)
-
+  
       (after 'ace-jump
           (key-chord-define evil-normal-state-map "jw" 'ace-jump-word-mode)
           (key-chord-define evil-normal-state-map "jc" 'ace-jump-char-mode)
           (key-chord-define evil-normal-state-map "jl" 'ace-jump-line-mode))
-
+  
     (after 'evil-matchit
       (define-key evil-normal-state-map "%" 'evilmi-jump-items))
-
+  
     (after 'git-gutter+-autoloads
       (define-key evil-normal-state-map (kbd "[ h") 'git-gutter+-previous-hunk)
       (define-key evil-normal-state-map (kbd "] h") 'git-gutter+-next-hunk)
       (define-key evil-normal-state-map (kbd ", g a") 'git-gutter+-stage-hunks)
       (define-key evil-normal-state-map (kbd ", g r") 'git-gutter+-revert-hunks)
       (evil-ex-define-cmd "Gw" (bind (git-gutter+-stage-whole-buffer))))
-
+  
     (after 'smex
       (define-key evil-visual-state-map (kbd "SPC SPC") 'smex)
       (define-key evil-normal-state-map (kbd "SPC SPC") 'smex))
-
+  
     (define-key evil-normal-state-map (kbd "SPC o") 'imenu)
     (define-key evil-normal-state-map (kbd "SPC b") 'switch-to-buffer)
     (define-key evil-normal-state-map (kbd "SPC k") 'ido-kill-buffer)
     (define-key evil-normal-state-map (kbd "SPC f") 'ido-find-file)
-
+  
     (after 'helm-autoloads
       (define-key evil-normal-state-map (kbd "SPC e") 'helm-recentf)
       (define-key evil-normal-state-map (kbd "SPC t") 'helm-etags-select)
       (define-key evil-normal-state-map (kbd "SPC l") 'helm-swoop)
       (define-key evil-normal-state-map (kbd "SPC y") 'helm-show-kill-ring)
       (define-key evil-normal-state-map [f5] 'helm-mini))
-
+  
     (define-key evil-normal-state-map (kbd "[ SPC") (bind (evil-insert-newline-above) (forward-line)))
     (define-key evil-normal-state-map (kbd "] SPC") (bind (evil-insert-newline-below) (forward-line -1)))
     (define-key evil-normal-state-map (kbd "[ e") (kbd "ddkP"))
@@ -821,46 +824,46 @@ representing colors with the color they represent as background.
     (define-key evil-normal-state-map (kbd "] b") 'next-buffer)
     (define-key evil-normal-state-map (kbd "[ q") 'previous-error)
     (define-key evil-normal-state-map (kbd "] q") 'next-error)
-
+  
     (define-key evil-normal-state-map (kbd "g p") (kbd "` [ v ` ]"))
-
+  
     (after 'etags-select
       (define-key evil-normal-state-map (kbd "g ]") 'etags-select-find-tag-at-point))
-
+  
     (define-key evil-normal-state-map (kbd "C-p") 'projectile-find-file)
     (define-key evil-normal-state-map (kbd "C-q") 'universal-argument)
-
+  
     (define-key evil-normal-state-map (kbd "C-h") 'evil-window-left)
     (define-key evil-normal-state-map (kbd "C-j") 'evil-window-down)
     (define-key evil-normal-state-map (kbd "C-k") 'evil-window-up)
     (define-key evil-normal-state-map (kbd "C-l") 'evil-window-right)
-
+  
     (define-key evil-motion-state-map "j" 'evil-next-visual-line)
     (define-key evil-motion-state-map "k" 'evil-previous-visual-line)
-
+  
     (define-key evil-normal-state-map (kbd "Q") 'my-window-killer)
     (define-key evil-normal-state-map (kbd "Y") (kbd "y$"))
-
+  
     (define-key evil-visual-state-map (kbd ", e") 'eval-region)
-
+  
     ;; emacs lisp
     (after 'elisp-slime-nav-autoloads
       (evil-define-key 'normal emacs-lisp-mode-map (kbd "g d") 'elisp-slime-nav-find-elisp-thing-at-point)
       (evil-define-key 'normal emacs-lisp-mode-map (kbd "K") 'elisp-slime-nav-describe-elisp-thing-at-point))
-
+  
     (after 'ag-autoloads
       (define-key evil-normal-state-map (kbd "SPC /") 'ag-regexp-project-at-point))
-
+  
     (after 'multiple-cursors
       (define-key evil-visual-state-map (kbd "C->") 'mc/mark-all-like-this)
       (define-key evil-normal-state-map (kbd "C->") 'mc/mark-next-like-this)
       (define-key evil-normal-state-map (kbd "C-<") 'mc/mark-previous-like-this))
-
+  
     (after 'ace-jump-mode-autoloads
       (define-key evil-normal-state-map (kbd "SPC j") 'ace-jump-char-mode)
       (define-key evil-motion-state-map (kbd "SPC") 'evil-ace-jump-char-mode)
       (define-key evil-motion-state-map (kbd "S-SPC") 'evil-ace-jump-line-mode))
-
+  
     (after 'magit
       (define-key magit-status-mode-map (kbd "C-n") 'magit-goto-next-sibling-section)
       (define-key magit-status-mode-map (kbd "C-p") 'magit-goto-previous-sibling-section)
@@ -868,58 +871,58 @@ representing colors with the color they represent as background.
         "K" 'magit-discard-item
         "l" 'magit-key-mode-popup-logging
         "h" 'magit-toggle-diff-refine-hunk))
-
+  
     ;; butter fingers
     (evil-ex-define-cmd "Q" 'evil-quit)
     (evil-ex-define-cmd "Qa" 'evil-quit-all)
     (evil-ex-define-cmd "QA" 'evil-quit-all))
-
+  
   ;; escape minibuffer
   (define-key minibuffer-local-map [escape] 'my-minibuffer-keyboard-quit)
   (define-key minibuffer-local-ns-map [escape] 'my-minibuffer-keyboard-quit)
   (define-key minibuffer-local-completion-map [escape] 'my-minibuffer-keyboard-quit)
   (define-key minibuffer-local-must-match-map [escape] 'my-minibuffer-keyboard-quit)
   (define-key minibuffer-local-isearch-map [escape] 'my-minibuffer-keyboard-quit)
-
+  
   (define-key minibuffer-local-map (kbd "C-w") 'backward-kill-word)
-
+  
   (after 'package
     (after 'evil
       (evil-add-hjkl-bindings package-menu-mode-map 'emacs))
     )
-
+  
   (after 'project-explorer-autoloads
     (after 'project-explorer
       (after 'evil
         (define-key project-explorer-mode-map (kbd "C-l") 'evil-window-right)))
     (global-set-key [f2] 'project-explorer-open)
     (global-set-key [f3] 'pe/show-file))
-
+  
   (after 'comint
     (define-key comint-mode-map [up] 'comint-previous-input)
     (define-key comint-mode-map [down] 'comint-next-input))
-
+  
   (after 'auto-complete
     (define-key ac-completing-map (kbd "C-n") 'ac-next)
     (define-key ac-completing-map (kbd "C-p") 'ac-previous))
-
+  
   (after 'expand-region-autoloads
     (global-set-key (kbd "C-=") 'er/expand-region))
-
+  
   ;; mouse scrolling in terminal
   (unless (display-graphic-p)
     (global-set-key [mouse-4] (bind (scroll-down 1)))
     (global-set-key [mouse-5] (bind (scroll-up 1))))
-
+  
   (global-set-key [prior] 'previous-buffer)
   (global-set-key [next] 'next-buffer)
-
+  
   (global-set-key (kbd "C-S-<left>") 'shrink-window-horizontally)
   (global-set-key (kbd "C-x C-b") 'ibuffer)
   (global-set-key (kbd "C-x C-k") 'kill-this-buffer)
   (global-set-key (kbd "C-x g") 'my-google)
   (global-set-key (kbd "C-c e") 'my-eval-and-replace)
-
+  
   ;; have no use for these default bindings
   (global-unset-key (kbd "C-x m"))
 #+END_SRC
