--- a/.emacs.d/emacs-init.org
+++ b/.emacs.d/emacs-init.org
@@ -6,11 +6,14 @@ emacslisp and org-mode than to combine them both at once?
 *** Make org-mode display pretty '...' characters for distinguishing
 *** Integrate dotfiles for [[Magit]]
 * Settings
-Disable the toolbars in console mode (I think).
+  Disable the toolbars in console mode (I think).
 #+BEGIN_SRC emacs-lisp
   (when (fboundp 'tool-bar-mode) (tool-bar-mode -1))
   (when (fboundp 'scroll-bar-mode) (scroll-bar-mode -1))
   (unless (display-graphic-p) (menu-bar-mode -1))
+#+END_SRC
+  Set the default font (only matters in graphical mode).
+#+BEGIN_SRC emacs-lisp
   (set-default-font "Terminus-10")
 #+END_SRC
 * Package loading
@@ -693,6 +696,111 @@ representing colors with the color they represent as background.
   
       (defadvice evil-ex-search-previous (after advice-for-evil-ex-search-previous activate)
         (evil-scroll-line-to-center (line-number-at-pos)))
+  
+      (require-package 'key-chord)
+      (key-chord-mode 1)
+      (define-key evil-motion-state-map "gn" 'my-evil-next-match)
+      (define-key evil-motion-state-map "gN" 'my-evil-previous-match)
+  
+      ;;; esc quits
+      (define-key evil-normal-state-map [escape] 'keyboard-quit)
+      (define-key evil-visual-state-map [escape] 'keyboard-quit)
+      (define-key minibuffer-local-map [escape] 'minibuffer-keyboard-quit)
+      (define-key minibuffer-local-ns-map [escape] 'minibuffer-keyboard-quit)
+      (define-key minibuffer-local-completion-map [escape] 'minibuffer-keyboard-quit)
+      (define-key minibuffer-local-must-match-map [escape] 'minibuffer-keyboard-quit)
+      (define-key minibuffer-local-isearch-map [escape] 'minibuffer-keyboard-quit)
+  
+      (after 'ace-jump
+          (key-chord-define evil-normal-state-map "jw" 'ace-jump-word-mode)
+          (key-chord-define evil-normal-state-map "jc" 'ace-jump-char-mode)
+          (key-chord-define evil-normal-state-map "jl" 'ace-jump-line-mode))
+  
+    (after 'evil-matchit
+      (define-key evil-normal-state-map "%" 'evilmi-jump-items))
+  
+    (after 'git-gutter+-autoloads
+      (define-key evil-normal-state-map (kbd "[ h") 'git-gutter+-previous-hunk)
+      (define-key evil-normal-state-map (kbd "] h") 'git-gutter+-next-hunk)
+      (define-key evil-normal-state-map (kbd ", g a") 'git-gutter+-stage-hunks)
+      (define-key evil-normal-state-map (kbd ", g r") 'git-gutter+-revert-hunks)
+      (evil-ex-define-cmd "Gw" (bind (git-gutter+-stage-whole-buffer))))
+  
+    (after 'smex
+      (define-key evil-visual-state-map (kbd "SPC SPC") 'smex)
+      (define-key evil-normal-state-map (kbd "SPC SPC") 'smex))
+  
+    (define-key evil-normal-state-map (kbd "SPC o") 'imenu)
+    (define-key evil-normal-state-map (kbd "SPC b") 'switch-to-buffer)
+    (define-key evil-normal-state-map (kbd "SPC k") 'ido-kill-buffer)
+    (define-key evil-normal-state-map (kbd "SPC f") 'ido-find-file)
+  
+    (after 'helm-autoloads
+      (define-key evil-normal-state-map (kbd "SPC e") 'helm-recentf)
+      (define-key evil-normal-state-map (kbd "SPC t") 'helm-etags-select)
+      (define-key evil-normal-state-map (kbd "SPC l") 'helm-swoop)
+      (define-key evil-normal-state-map (kbd "SPC y") 'helm-show-kill-ring)
+      (define-key evil-normal-state-map [f5] 'helm-mini))
+  
+    (define-key evil-normal-state-map (kbd "[ SPC") (bind (evil-insert-newline-above) (forward-line)))
+    (define-key evil-normal-state-map (kbd "] SPC") (bind (evil-insert-newline-below) (forward-line -1)))
+    (define-key evil-normal-state-map (kbd "[ e") (kbd "ddkP"))
+    (define-key evil-normal-state-map (kbd "] e") (kbd "ddp"))
+    (define-key evil-normal-state-map (kbd "[ b") 'previous-buffer)
+    (define-key evil-normal-state-map (kbd "] b") 'next-buffer)
+    (define-key evil-normal-state-map (kbd "[ q") 'previous-error)
+    (define-key evil-normal-state-map (kbd "] q") 'next-error)
+  
+    (define-key evil-normal-state-map (kbd "g p") (kbd "` [ v ` ]"))
+  
+    (after 'etags-select
+      (define-key evil-normal-state-map (kbd "g ]") 'etags-select-find-tag-at-point))
+  
+    (define-key evil-normal-state-map (kbd "C-p") 'projectile-find-file)
+    (define-key evil-normal-state-map (kbd "C-q") 'universal-argument)
+  
+    (define-key evil-normal-state-map (kbd "C-h") 'evil-window-left)
+    (define-key evil-normal-state-map (kbd "C-j") 'evil-window-down)
+    (define-key evil-normal-state-map (kbd "C-k") 'evil-window-up)
+    (define-key evil-normal-state-map (kbd "C-l") 'evil-window-right)
+  
+    (define-key evil-motion-state-map "j" 'evil-next-visual-line)
+    (define-key evil-motion-state-map "k" 'evil-previous-visual-line)
+  
+    (define-key evil-normal-state-map (kbd "Y") (kbd "y$"))
+  
+    (define-key evil-visual-state-map (kbd ", e") 'eval-region)
+  
+    ;; emacs lisp
+    (after 'elisp-slime-nav-autoloads
+      (evil-define-key 'normal emacs-lisp-mode-map (kbd "g d") 'elisp-slime-nav-find-elisp-thing-at-point)
+      (evil-define-key 'normal emacs-lisp-mode-map (kbd "K") 'elisp-slime-nav-describe-elisp-thing-at-point))
+  
+    (after 'ag-autoloads
+      (define-key evil-normal-state-map (kbd "SPC /") 'ag-regexp-project-at-point))
+  
+    (after 'multiple-cursors
+      (define-key evil-visual-state-map (kbd "C->") 'mc/mark-all-like-this)
+      (define-key evil-normal-state-map (kbd "C->") 'mc/mark-next-like-this)
+      (define-key evil-normal-state-map (kbd "C-<") 'mc/mark-previous-like-this))
+  
+    (after 'ace-jump-mode-autoloads
+      (define-key evil-normal-state-map (kbd "SPC j") 'ace-jump-char-mode)
+      (define-key evil-motion-state-map (kbd "SPC") 'evil-ace-jump-char-mode)
+      (define-key evil-motion-state-map (kbd "S-SPC") 'evil-ace-jump-line-mode))
+  
+    (after 'magit
+      (define-key magit-status-mode-map (kbd "C-n") 'magit-goto-next-sibling-section)
+      (define-key magit-status-mode-map (kbd "C-p") 'magit-goto-previous-sibling-section)
+      (evil-add-hjkl-bindings magit-status-mode-map 'emacs
+        "K" 'magit-discard-item
+        "l" 'magit-key-mode-popup-logging
+        "h" 'magit-toggle-diff-refine-hunk))
+  
+    ;; butter fingers
+    (evil-ex-define-cmd "Q" 'evil-quit)
+    (evil-ex-define-cmd "Qa" 'evil-quit-all)
+    (evil-ex-define-cmd "QA" 'evil-quit-all)
 #+END_SRC
 ** Evil-org-mode
    From https://github.com/edwtjo/evil-org-mode/blob/master/evil-org.el
@@ -859,111 +967,6 @@ representing colors with the color they represent as background.
 #+END_SRC
 * keybindings
 #+BEGIN_SRC emacs-lisp
-  (after 'evil
-      (require-package 'key-chord)
-      (key-chord-mode 1)
-      (define-key evil-motion-state-map "gn" 'my-evil-next-match)
-      (define-key evil-motion-state-map "gN" 'my-evil-previous-match)
-  
-      ;;; esc quits
-      (define-key evil-normal-state-map [escape] 'keyboard-quit)
-      (define-key evil-visual-state-map [escape] 'keyboard-quit)
-      (define-key minibuffer-local-map [escape] 'minibuffer-keyboard-quit)
-      (define-key minibuffer-local-ns-map [escape] 'minibuffer-keyboard-quit)
-      (define-key minibuffer-local-completion-map [escape] 'minibuffer-keyboard-quit)
-      (define-key minibuffer-local-must-match-map [escape] 'minibuffer-keyboard-quit)
-      (define-key minibuffer-local-isearch-map [escape] 'minibuffer-keyboard-quit)
-  
-      (after 'ace-jump
-          (key-chord-define evil-normal-state-map "jw" 'ace-jump-word-mode)
-          (key-chord-define evil-normal-state-map "jc" 'ace-jump-char-mode)
-          (key-chord-define evil-normal-state-map "jl" 'ace-jump-line-mode))
-  
-    (after 'evil-matchit
-      (define-key evil-normal-state-map "%" 'evilmi-jump-items))
-  
-    (after 'git-gutter+-autoloads
-      (define-key evil-normal-state-map (kbd "[ h") 'git-gutter+-previous-hunk)
-      (define-key evil-normal-state-map (kbd "] h") 'git-gutter+-next-hunk)
-      (define-key evil-normal-state-map (kbd ", g a") 'git-gutter+-stage-hunks)
-      (define-key evil-normal-state-map (kbd ", g r") 'git-gutter+-revert-hunks)
-      (evil-ex-define-cmd "Gw" (bind (git-gutter+-stage-whole-buffer))))
-  
-    (after 'smex
-      (define-key evil-visual-state-map (kbd "SPC SPC") 'smex)
-      (define-key evil-normal-state-map (kbd "SPC SPC") 'smex))
-  
-    (define-key evil-normal-state-map (kbd "SPC o") 'imenu)
-    (define-key evil-normal-state-map (kbd "SPC b") 'switch-to-buffer)
-    (define-key evil-normal-state-map (kbd "SPC k") 'ido-kill-buffer)
-    (define-key evil-normal-state-map (kbd "SPC f") 'ido-find-file)
-  
-    (after 'helm-autoloads
-      (define-key evil-normal-state-map (kbd "SPC e") 'helm-recentf)
-      (define-key evil-normal-state-map (kbd "SPC t") 'helm-etags-select)
-      (define-key evil-normal-state-map (kbd "SPC l") 'helm-swoop)
-      (define-key evil-normal-state-map (kbd "SPC y") 'helm-show-kill-ring)
-      (define-key evil-normal-state-map [f5] 'helm-mini))
-  
-    (define-key evil-normal-state-map (kbd "[ SPC") (bind (evil-insert-newline-above) (forward-line)))
-    (define-key evil-normal-state-map (kbd "] SPC") (bind (evil-insert-newline-below) (forward-line -1)))
-    (define-key evil-normal-state-map (kbd "[ e") (kbd "ddkP"))
-    (define-key evil-normal-state-map (kbd "] e") (kbd "ddp"))
-    (define-key evil-normal-state-map (kbd "[ b") 'previous-buffer)
-    (define-key evil-normal-state-map (kbd "] b") 'next-buffer)
-    (define-key evil-normal-state-map (kbd "[ q") 'previous-error)
-    (define-key evil-normal-state-map (kbd "] q") 'next-error)
-  
-    (define-key evil-normal-state-map (kbd "g p") (kbd "` [ v ` ]"))
-  
-    (after 'etags-select
-      (define-key evil-normal-state-map (kbd "g ]") 'etags-select-find-tag-at-point))
-  
-    (define-key evil-normal-state-map (kbd "C-p") 'projectile-find-file)
-    (define-key evil-normal-state-map (kbd "C-q") 'universal-argument)
-  
-    (define-key evil-normal-state-map (kbd "C-h") 'evil-window-left)
-    (define-key evil-normal-state-map (kbd "C-j") 'evil-window-down)
-    (define-key evil-normal-state-map (kbd "C-k") 'evil-window-up)
-    (define-key evil-normal-state-map (kbd "C-l") 'evil-window-right)
-  
-    (define-key evil-motion-state-map "j" 'evil-next-visual-line)
-    (define-key evil-motion-state-map "k" 'evil-previous-visual-line)
-  
-    (define-key evil-normal-state-map (kbd "Y") (kbd "y$"))
-  
-    (define-key evil-visual-state-map (kbd ", e") 'eval-region)
-  
-    ;; emacs lisp
-    (after 'elisp-slime-nav-autoloads
-      (evil-define-key 'normal emacs-lisp-mode-map (kbd "g d") 'elisp-slime-nav-find-elisp-thing-at-point)
-      (evil-define-key 'normal emacs-lisp-mode-map (kbd "K") 'elisp-slime-nav-describe-elisp-thing-at-point))
-  
-    (after 'ag-autoloads
-      (define-key evil-normal-state-map (kbd "SPC /") 'ag-regexp-project-at-point))
-  
-    (after 'multiple-cursors
-      (define-key evil-visual-state-map (kbd "C->") 'mc/mark-all-like-this)
-      (define-key evil-normal-state-map (kbd "C->") 'mc/mark-next-like-this)
-      (define-key evil-normal-state-map (kbd "C-<") 'mc/mark-previous-like-this))
-  
-    (after 'ace-jump-mode-autoloads
-      (define-key evil-normal-state-map (kbd "SPC j") 'ace-jump-char-mode)
-      (define-key evil-motion-state-map (kbd "SPC") 'evil-ace-jump-char-mode)
-      (define-key evil-motion-state-map (kbd "S-SPC") 'evil-ace-jump-line-mode))
-  
-    (after 'magit
-      (define-key magit-status-mode-map (kbd "C-n") 'magit-goto-next-sibling-section)
-      (define-key magit-status-mode-map (kbd "C-p") 'magit-goto-previous-sibling-section)
-      (evil-add-hjkl-bindings magit-status-mode-map 'emacs
-        "K" 'magit-discard-item
-        "l" 'magit-key-mode-popup-logging
-        "h" 'magit-toggle-diff-refine-hunk))
-  
-    ;; butter fingers
-    (evil-ex-define-cmd "Q" 'evil-quit)
-    (evil-ex-define-cmd "Qa" 'evil-quit-all)
-    (evil-ex-define-cmd "QA" 'evil-quit-all))
   
   ;; escape minibuffer
   (define-key minibuffer-local-map [escape] 'my-minibuffer-keyboard-quit)
