ido-mode tweaks

--- a/.emacs.d/emacs-init.org
+++ b/.emacs.d/emacs-init.org
@@ -286,7 +286,6 @@ Pretty distinct names for buffers
       )
   )
 #+END_SRC
-
 * Eyecandy
 ** Smart modelines
 #+BEGIN_SRC emacs-lisp
@@ -470,6 +469,9 @@ representing colors with the color they represent as background.
       (setq ido-use-virtual-buffers t)
       (setq ido-enable-flex-matching t)
       (setq ido-create-new-buffer 'always)
+      (setq ido-show-dot-for-dired t)
+      (setq ido-confirm-unique-completion nil)
+      (setq ido-enable-last-directory-history nil)
       (setq ido-use-filename-at-point 'guess)
       (setq ido-save-directory-list-file (concat user-emacs-directory ".cache/ido.last"))
       (require-package 'ido-ubiquitous)
