--- a/.emacs.d/emacs-init.org
+++ b/.emacs.d/emacs-init.org
@@ -1020,41 +1020,28 @@ representing colors with the color they represent as background.
   (global-unset-key (kbd "C-x m"))
 #+END_SRC
 ** Unbound keys
+The following is taken from [[http://www.emacswiki.org/emacs/unbound.el][EmacsWiki]], and the license of =unbound.el=
+is GPL version 2 or (at your option) any later version.
+#+BEGIN_QUOTE
+unbound.el --- find convenient unbound keystrokes
+
+Copyright (C) 2007 Davis Herring
+
+Author: Davis Herring <herring@lanl.gov>
+Version: 0.1
+Maintainer: Davis Herring
+Keywords: keyboard
+#+END_QUOTE
+The author provided some commentary on the script, shown below:
+#+BEGIN_QUOTE
+Commentary:
+The only entry point is `describe-unbound-keys'; it prompts for the maximum
+complexity to allow, which should probably be at least 5 to find enough
+keys to be worthwhile.  Lisp may call just `unbound-keys' to get a list of
+key representations suitable for `define-key'.
+#+END_QUOTE
+The source code for =unbound.el= is shown below:
 #+BEGIN_SRC emacs-lisp
-  ;;; unbound.el --- find convenient unbound keystrokes
-  
-  ;; Copyright (C) 2007 Davis Herring
-  
-  ;; Author: Davis Herring <herring@lanl.gov>
-  ;; Version: 0.1
-  ;; Maintainer: Davis Herring
-  ;; Keywords: keyboard
-  
-  ;; This file is not part of GNU Emacs.
-  
-  ;; This program is free software; you can redistribute it and/or modify
-  ;; it under the terms of the GNU General Public License as published by
-  ;; the Free Software Foundation; either version 2, or (at your option)
-  ;; any later version.
-  
-  ;; This program is distributed in the hope that it will be useful,
-  ;; but WITHOUT ANY WARRANTY; without even the implied warranty of
-  ;; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-  ;; GNU General Public License for more details.
-  
-  ;; You should have received a copy of the GNU General Public License
-  ;; along with this program; see the file COPYING.  If not, write to the
-  ;; Free Software Foundation, Inc., 51 Franklin Street, Fifth Floor
-  ;; Boston, MA 02110-1301, USA.
-  
-  ;;; Commentary:
-  ;; The only entry point is `describe-unbound-keys'; it prompts for the maximum
-  ;; complexity to allow, which should probably be at least 5 to find enough
-  ;; keys to be worthwhile.  Lisp may call just `unbound-keys' to get a list of
-  ;; key representations suitable for `define-key'.
-  
-  ;;; Code:
-  
   (eval-when-compile (require 'cl))       ; for `dotimes', `push' (Emacs 21)
   
   (defcustom unbound-modifiers '(control meta shift)
